added some info

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ionicons": "^7.4.0",
     "jetbrains-mono": "^1.0.6",
     "next": "15.2.4",
     "react": "^19.0.0",
