--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.6.0",
+    "@supabase/supabase-js": "^2.49.4",
     "ionicons": "^7.4.0",
     "jetbrains-mono": "^1.0.6",
     "next": "15.2.4",
+    "prisma": "^6.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "styled-components": "^6.1.17"
+    "styled-components": "^6.1.17",
+    "supabase": "^2.22.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
