--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "ionicons": "^7.4.0",
     "jetbrains-mono": "^1.0.6",
-    "next": "15.2.4",
+    "next": "^15.2.4",
     "prisma": "^6.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
