--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@prisma/client": "^6.6.0",
     "@supabase/supabase-js": "^2.49.4",
+    "framer-motion": "^12.16.0",
     "ionicons": "^7.4.0",
     "jetbrains-mono": "^1.0.6",
     "next": "^15.2.4",
