--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@prisma/client": "^6.6.0",
     "@supabase/supabase-js": "^2.49.4",
+    "@types/jsonwebtoken": "^9.0.10",
     "framer-motion": "^12.16.0",
     "ionicons": "^7.4.0",
     "jetbrains-mono": "^1.0.6",
+    "jsonwebtoken": "^9.0.2",
     "next": "^15.2.4",
     "prisma": "^6.6.0",
     "react": "^19.0.0",
